added section on ML and uncertainties

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,4 +1,7 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
+\newacronym{ann}{ANN}{Artificial Neural Network}
+\newacronym{bnn}{BNN}{Bayesian Neural Network}
+\newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{dem}{DEM}{Digital Elevation Model}
 \newacronym{doe}{DOE}{United States Department of Energy}
 \newacronym{egs}{EGS}{Enhanced Geothermal Systems}
@@ -7,14 +10,18 @@
 \newacronym{gdh}{GDH}{Geothermal District Heating}
 \newacronym{ghg}{GHG}{Greenhouse Gas}
 \newacronym{gto}{GTO}{Geothermal Technologies Office}
+\newacronym{iea}{IEA}{International Energy Agency}
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{irena}{IRENA}{International Renewable Energy Agency}
-\newacronym{kgra}{KGRAs}{Known Geothermal Resource Areas}
+\newacronym{kgra}{KGRA}{Known Geothermal Resource Area}
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
-\newacronym{lanl}{LANL}{Los Alamos National Lab}
+\newacronym{lanl}{LANL}{Los Alamos National Laboratory}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
+\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
+\newacronym{nm}{NM}{New Mexico}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
+\newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
 \newacronym{usgs}{USGS}{United States Geological Survey}
