--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -58,7 +58,7 @@ The original geothermal systems exploited by mankind for millennia are hydrother
 
 These few examples capture some of the many potential opportunities for low-temperature (<90\(^\circ C\)) and medium-temperature (<150\(^\circ C\)) geothermal resource use, even beyond hydrothermal systems. GDH can help meet building and water temperature needs, and agriculture, textiles, paper, chemicals, and even the food industry can also benefit from access to low-temperature geothermal fluids \citep{doe_low_2021,liu_overview_2015}. Interest has led to funding from agencies like the \acrlong{gto} (\acrshort{gto}) within the \acrlong{doe} (\acrshort{doe}); a grant was recently awarded to Cornell University in support of piloting a deep direct-use project to provide baseload heating for the university campus supporting peak demand during cold upstate New York winter months  \citep{hamm_geothermal_2021,tester_integrating_2015}.
 
-The topic of this thesis instead concerns the use of moderate- to high-temperature geothermal for power generation. The first example of geothermal power production came from Italian experiments in 1904, and the first commercial plant went online in Larderello, Italy in 1914 \citep[~p. 251]{dipippo_geothermal_2012}. Geothermal-generated electricity made its debut in the United States with the development of The Geysers field beginning in 1960 \citep{tester_future_2006}. Hydrothermal plants quickly appeared in New Zealand, Japan, Iceland, Indonesia, Kenya, Philippines and elsewhere throughout the 1970s-1980s, with continued growth through to present-day \citep{lund_characteristics_2007}. 2020 statistics from the \acrlong{irena} (\acrshort{irena}) place the United States as world leader in geothermal installed capacity (2587 MW), followed by Indonesia (2131 MW) and Philippines (1928 MW) \citep{irena_country_2021} (Figure \ref{fig:irena-rank}). 
+The topic of this thesis instead concerns the use of moderate- to high-temperature geothermal for power generation. The first example of geothermal power production came from Italian experiments in 1904, and the first commercial plant went online in Larderello, Italy in 1914 \citep[~p. 251]{dipippo_geothermal_2012}. Geothermal-generated electricity made its debut in the United States with the development of The Geysers field beginning in 1960 \citep{tester_future_2006}. Hydrothermal plants quickly appeared in New Zealand, Japan, Iceland, Indonesia, Kenya, Philippines and elsewhere throughout the 1970s-1980s, with continued growth through to present-day \citep{lund_characteristics_2007}. 2020 statistics from the \acrlong{irena} (\acrshort{irena}) place the United States as world leader in geothermal installed capacity (2587 MWe), followed by Indonesia (2131 MWe) and Philippines (1928 MWe) \citep{irena_country_2021} (Figure \ref{fig:irena-rank}). 
 
 \begin{figure}[htbp]
 \centering
@@ -67,7 +67,7 @@ The topic of this thesis instead concerns the use of moderate- to high-temperatu
 \label{fig:irena-rank}
 \end{figure}
 
-A comprehensive assessment of moderate and high-temperature \acrlong{kgra} (\acrshort{kgra}) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S. has conventional geothermal (hydrothermal) power generation potential of \texttt{\char`\~}9,000 MWe, and an additional \texttt{\char`\~}30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are \texttt{\char`\~}8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of \texttt{\char`\~}16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
+A comprehensive assessment of moderate and high-temperature \acrlong{kgra}s (\acrshort{kgra}s) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S. has conventional geothermal (hydrothermal) power generation potential of \texttt{\char`\~}9,000 MWe, and an additional \texttt{\char`\~}30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are \texttt{\char`\~}8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of \texttt{\char`\~}16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
 
 \subsubsection{Enhanced Geothermal Systems}\label{ch2:egs}
 In some cases, the potential for a geothermal system exists even when one or more of the fundamental elements listed in Section \ref{ch2:sysfund} are missing. These unconventional geothermal systems, often referred to as \acrlong{egs} (\acrshort{egs}), contain a significant heat source but lack either the adequate permeability or sufficient rechargeable working fluids to meet the requirements of a hydrothermal system. A broader definition for EGS includes thermal production from sedimentary and crystalline tight rock, poorly-performing hydrothermal systems, co-production from oil \& gas operations, and even thermal recovery directly from magma \citep{tester_future_2006}. Focusing on the more common tight rock scenario, EGS systems work by artificially creating or improving reservoir permeability and ensuring sustained flow rates of fluids through the reservoir \citep[~p. 281]{glassley_geothermal_2015}. Fluids pumped down an injection well pass through a stimulated fracture network, heat up through direct contact with the thermal reservoir, and return to the surface via one or more producing wells to serve as inlet fluids for a power plant \textbf{MISSING FIGURE}. Reservoir stimulation generally involves hydraulic fracturing (hydro-fracking or just “fracking”) techniques to create pathways connecting injector-producer pairs. The associated technology and capabilities are thus well-aligned with unconventional oil \& gas operations \citep{petty_synergies_2009}. 
@@ -79,6 +79,7 @@ As the fate of these projects might suggest, the long-standing promise of EGS ha
 \section{Geothermal Exploration}\label{ch2:geoexp}
 \subsection{Background}
 Historically, the identification of geothermal resources primarily relied on surface expressions of hot fluids circulating at depth. Quite simply, if a bubbling hot spring or a geyser was present, you had a working hydrothermal system. Some of the first sites for geothermal power production, like Larderello and The Geysers, were unsurprisingly targeted because of their tell-tale surface characteristics \citep[~p. 111]{glassley_geothermal_2015}. However, this prospecting method only applies to fully-functioning hydrothermal systems, and not all such systems have surface manifestations if fluids remain trapped beneath a subsurface impermeable seal. These hidden or “blind” geothermal resources require more sophisticated exploration methods to identify and assess accurately.
+
 \subsection{Regional Exploration}
 Regional evaluation techniques classically relied on sparse borehole data, including water wells and oil \& gas wells, to map out the geothermal potential of the U.S. \citep{kehle_aapg_1970}. Successive efforts led to progressively more comprehensive collections of surface heat flow and borehole temperature measurements \citep{blackwell_temperature-at-depth_2011, blackwell_heat_1990, muffler_assessment_1979, sorey_low-temperature_1983, wisian_heat_1999}, now widely-available with other geothermal data through the DOE-funded National Geothermal Data System platform \citep{anderson_national_2013}. These efforts supported a better understanding of broad trends directly tied to tectonic provinces in the United States. Subduction and transform plate boundaries in the West, combined with extension in the Basin and Range, make this area of the U.S. more susceptible to high heat flow, high geothermal gradient, and greater potential for hydrothermal system activity \citep{mariner_low-temperature_1983}. Passive margins on the Atlantic and Gulf of Mexico sides make those regions less likely to host significant hydrothermal systems, although surveys have identified sedimentary basins with elevated heat flow in the south (Louisiana-Arkansas), central (Iowa-Illinois, Nebraska-South Dakota), and eastern (Appalachians) parts of the country \citep{blackwell_geothermal_1995, sorey_low-temperature_1983}.
 
@@ -142,28 +143,59 @@ Geophysical methods also offer regional data coverage while also providing insig
 
 \subsection{Strategies}
 \subsubsection{Joint Inversion}
-As powerful as geophysical methods are at remotely detecting earth properties, each method represents an inherently underconstrained problem. Complex mathematical routines can invert data collected by aerial survey (e.g., gravity, magnetics) or through surface acquisition techniques (resistivity, MT, seismic) to create 2D or 3D subsurface models. Still, unlike highly precise medical imaging technologies like Magnetic Resonance Imaging (MRI) that completely surround the target, geophysical techniques have a limited top-down view of the earth and must contend with noisy environments. Solutions to geophysical problems thus tend to be non-unique, and uncertainty increases with depth. Joint approaches to mathematical inversion for subsurface models address this ambiguity by constraining solutions to match the observations from multiple geophysical methods at once \citep{vozoff_joint_1975}. The complexity of a joint inverse problem applied to geothermal rapidly grows as more data sets are incorporated, particularly when the different data are sensitive to different earth properties \citep{moorkamp_framework_2011}. In addition, geothermal model results can meaningfully differ depending on the selected mathematical treatment used to generate solutions \citep{rosenkjaer_comparison_2015}. One alternative approach avoids the mathematical and computational demands by combining data semi-quantitatively, either by visually correlating individual model results or by cascading constraints from one geophysical model to the next to generate an integrated solution \citep{jousset_hengill_2011, lichoro_joint_2019}.
+As powerful as geophysical methods are at remotely detecting earth properties, each method represents an inherently underconstrained problem. Complex mathematical routines can invert data collected by aerial survey (e.g., gravity, magnetics) or through surface acquisition techniques (resistivity, MT, seismic) to create 2D or 3D subsurface models. Still, unlike highly precise medical imaging technologies like Magnetic Resonance Imaging (MRI) that completely surround the target, geophysical techniques have a limited top-down view of the earth and must contend with noisy environments. Solutions to geophysical problems thus tend to be non-unique, and uncertainty increases with depth. Joint approaches to mathematical inversion for subsurface models address this ambiguity by constraining solutions to match the observations from multiple geophysical methods at once \citep{vozoff_joint_1975}. The complexity of a joint inverse problem applied to geothermal rapidly grows as more data sets are incorporated, particularly when the different data are sensitive to different earth properties \citep{moorkamp_framework_2011}. In addition, geothermal model results can meaningfully differ depending on the selected mathematical treatment used to generate solutions \citep{rosenkjaer_comparison_2015}. One alternative approach avoids the mathematical and computational demands by combining data semi-quantitatively, either by visually correlating individual model results or by cascading constraints from one geophysical model to the next to generate an integrated solution \citep{jousset_hengill_2011, lichoro_joint_2019}. Absent a tightly-coupled formulation of the relationship between all data inputs, the weighted influence of each data source must be chosen by the analyst, which can be a significant source of uncertainty.
 
 \subsubsection{Play Fairway Analysis}
-Regional or play scale exploration methods adapted from oil \& gas companies include geospatial risk assessments known as \acrlong{pfa} (\acrshort{pfa}).  Conceptually, PFA breaks risk down into the constituent elements of a successful hydrocarbon play: reservoir, source, and seal \citep{fraser_regional_2010,nash_adaptation_2015}. Maps are generated for each element based on any available data, including literature reviews, point data like wells or field sampling, and modeling results. Taking the cumulative evidence (or lack thereof) as input, subject matter experts provide a perception of chance as a probability, and statistical approaches combine the different probability maps into a cumulative favorability map and calculations of yet-to-find resource volumes \citep{lottaroli_evaluating_2018}. The GTO supported a number of projects focused on applying PFA techniques to identify geothermal plays across the United States, including blind and EGS geothermal systems, in 2014 \citep{eeri_play_2014}. Each study developed its own methodology for defining the primary geothermal play risk factors, quantifying uncertainty, and generating a final favorability map \citep{faulds_discovering_2019, jordan_low_2016, nash_phase_2017, wannamaker_structurally_2016}. The two common risk elements among all studies included the presence of heat and permeability \citep{garchar_geothermal_2016}.
+Regional or play scale exploration methods adapted from oil \& gas companies include geospatial risk assessments known as \acrlong{pfa} (\acrshort{pfa}). Conceptually, PFA breaks risk down into the constituent elements of a successful hydrocarbon play: reservoir, source, and seal \citep{fraser_regional_2010,nash_adaptation_2015}, and sometimes structure or trap \citep{doust_exploration_2010}. Maps are generated for each element based on any available data, including literature reviews, point data like wells or field sampling, and modeling results. Taking the collective evidence (or lack thereof) as input, subject matter experts provide a perception of chance as a probability, and statistical approaches combine the different probability maps into a cumulative favorability map and calculations of yet-to-find resource volumes \citep{lottaroli_evaluating_2018}. The Geothermal Technologies Office recently supported a number of projects focused on applying PFA techniques to identify geothermal plays across the United States, including blind and EGS geothermal systems \citep{eeri_play_2014}. Each study developed its own methodology for defining the primary geothermal play risk factors, quantifying uncertainty, and generating a final favorability map \citep{faulds_discovering_2019, jordan_low_2016, nash_phase_2017, wannamaker_structurally_2016}. Final numerical favorability scores were defined by a combination of risk elements, most often heat and permeability, with weights determined from data confidence and/or expert option \citep{garchar_geothermal_2016}.
 
 \subsubsection{Machine Learning}
 
+Both joint inversion and PFA attempt to identify patterns from sometimes disparate data sets to assist in identifying and characterizing geothermal resources. And both require expert guidance on the weighting of data inputs to create an integrated final product. Machine learning methods can instead determine the appropriate relative weights directly from the data, making results repeatable and open to continuous improvement as additional data becomes available. Advances in data-driven machine learning approaches for pattern recognition and prediction are at the heart of a “digital transformation” in the earth sciences beginning in the late 2010s, driving significant change in how geoscientists in the oil \& gas industry and academia analyze data and derive subsurface insights \citep{gunderson_recent_2020}. National labs and academic programs are embracing the opportunity to apply machine learning to a variety of geothermal problems, with many federally-funded projects currently underway, e.g., image analysis for production-related ground deformation \citep{cavur_dinsar_2021}, real-time prediction of induced seismic events \citep{small_theory_2019}, and identification of faults from seismic data \citep{gao_delineating_2021}.
+
+Supervised learning methods like regression, tree-based ensemble methods, and neural networks need labeled example data, e.g., from wells or KGRA studies, to train on before providing predictive value. Unsupervised learning approaches like cluster analysis can learn directly from the structure of unlabeled input data. Studies applying both machine learning methodologies are revisiting play fairway investigations due to the ready accessibility of curated data sets. For example, the PFA for the Great Basin region of Nevada originally combined nine data sets (or “features”) by a grouping and weighting workflow to determine favorability for blind geothermal systems \citep{faulds_progress_2017}. As more data were acquired and previous features transformed or refined, the potential feature set progressively grew to over 20 regional layers \citep{brown_machine_2020, faulds_discovering_2019}. A proof of concept \acrlong{ann} (\acrshort{ann}) successfully reproduced the original PFA favorability map, and further efforts illustrated value in applying more advanced machine learning algorithms like principle component analysis paired with k-means clustering \citep{smith_characterizing_2021} and a probabilistic neural network for improved favorability prediction \citep{brown_machine_2020}.
+
+In another example, \citeauthor{bielicki_hydrogeolgic_2015} defined play fairways in southwest \acrlong{nm} (\acrshort{nm}) using a combination of twelve geologic, geophysical, and geochemical features to describe permeability, heat, and water play risk elements \citeyear{bielicki_hydrogeolgic_2015}. A subsequent project evaluated an augmented 20-feature data set from the same area. Using a semi-supervised principle component analysis and k-means clustering framework to define KGRA-associated groupings, the study found each KGRA cluster correlated strongly with the four regional physiographic provinces: the Basin and Range, Colorado Plateau, Mogollon-Datil Volcanic Field, and Rio Grande Rift \citep{pepin_new_2018}. A separate effort led by LANL tested an unsupervised learning method, \acrlong{nmfk} or \acrshort{nmfk}, on a 22-feature data set \citep{vesselinov_discovering_2020}. This method determines feature signatures for each cluster, and results suggest the different physiographic provinces may have a unique set of key features that aid in revealing hidden geothermal resources. In all studies conducted thus far for the southwest NM study area, geothermal favorability models provide a deterministic view of problem. This thesis reinvestigates the study area with focused attention on the variety of uncertainties involved in a machine learning approach, as well as how those uncertainties can impact the final model results and the choices made by E\&P decision-makers.
+
 \subsection{Uncertainties}
-\subsubsection{Important Indicators}
-\subsubsection{Data Coverage}
+
+Machine learning methods typically create mathematical models of a system under investigation based on empirical evidence rather than a formalized physics-based approach. Three main types of uncertainty impact these models, and each should be assessed when weighing model results for project decisions – in either exploration or production scenarios. 
+
 \subsubsection{Measurement Uncertainty}
+
+Every data point is a measurement of an object or phenomenon susceptible to multiple sources of error. The environmental conditions, instrument calibration, resolution limitations, and human skill can all impact the final value obtained \citep[~p. 11-14]{baird_experimentation_1962}. Measurement uncertainty defines the range within which the true measurement value lies. Expressed mathematically, \(y=\hat{y} \pm ku_c\) where \(y\) is the true measurement value, \(\hat{y}\) is the measured value, and \(ku_c\) is some factor times the estimate of the standard deviation of \(\hat{y}\), also called the standard error \((u_c)\). Under the assumption of a Gaussian distribution, \(k=2\)  corresponds with a 95\% confidence level and is a typical choice for reporting measurement uncertainty \citep{nist_nist_2021}.
+
+\subsubsection{Parameter Uncertainty}
+
+Modeling an input data set fundamentally involves estimating the values for a set of model parameters \(b_i, i = [0, n]\), where the total number of parameters can vary from one (e.g., the average value) to over one million for weights applied in deep neural networks. The degree with which the \(\hat{b}_i\) values match the true parameter values, \(b_i\), depends on the quality and amount of input data used for model training \citep[~p. 81]{james_introduction_2013}. This type of uncertainty can effectively be reduced with the addition of more data and evaluated using probabilistic methods. 
+
+\subsubsection{Structural Uncertainty}
+
+Models represent simplified approximations of real systems, which respond to and interact with a myriad of other systems. Reducing a system down to its essential complexity keeps it within the bounds of human cognition while also delivering an objective level of descriptive or predictive ability \citep[~p. 306]{crawley_system_2015}. But even the most elegant system model does not capture a fully accurate or complete depiction of real-world system behavior. Instead, a model choice is a trade-off between the validity of the model results and the effort required to build and interpret the model \citep[~p. 23]{morgan_best_2009}. Fundamentally, the uncertainty in model structure requires examining how results change as the structure changes.
+
+This thesis considers a modeling approach where all three types of uncertainty are directly addressed. The variety of models, and more specifically, the locations where models differ most strongly as a result of sensitivity testing of uncertainties, can provide as much useful information for how to proceed in a geothermal project as the model results alone.
+
 \section{Power Generation}\label{ch2:elec}
+
 \subsection{Surface}
+
 \subsubsection{Dry Steam}
+
 \subsubsection{Flash}
+
 \subsubsection{Binary Cycle}
+
 \subsection{Subsurface}
+
 \subsubsection{Natural Drive}
+
 \subsubsection{Hard Rock EGS}
+
 \subsubsection{Stratigraphic EGS}
+
 \subsubsection{Advanced Closed Loop}
+
 \subsection{Uncertainties}
+
 blah blah blah
 
 \section{Cost Modeling}\label{ch2:costmod}
