--- a/templates/main.tex
+++ b/templates/main.tex
@@ -60,6 +60,12 @@
 \usepackage{apacite}
 \usepackage{natbib}
 
+%% For equation symbols
+\usepackage[
+  separate-uncertainty = true,
+  multi-part-units = repeat
+]{siunitx}
+
 \usepackage{xparse}
 \ExplSyntaxOn
 
