--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,221 @@
 
+@article{petty_updated_2007,
+	title = {Updated {U}.{S}. {Geothermal} {Supply} {Characterization}},
+	abstract = {This paper documents the approach taken to characterize and represent an updated assessment of U.S. geothermal supply for use in forecasting the penetration of geothermal electrical generation in the National Energy Modeling System (NEMS). This work is motivated by several factors: The supply characterization used as the basis of several recent Department of Energy (DOE) forecasts of geothermal capacity is outdated; additional geothermal resource assessments have been published; and a new costing tool that incorporates current technology, engineering practices, and associated costs has been released.},
+	language = {en},
+	author = {Petty, S and Porro, G},
+	year = {2007},
+	keywords = {cost model, geothermal, supply curve},
+	pages = {24},
+}
+
+@article{augustine_updated_2010,
+	title = {Updated {U}.{S}. {Geothermal} {Supply} {Curve}},
+	language = {en},
+	author = {Augustine, Chad and Young, Katherine R and Anderson, Arlene},
+	year = {2010},
+	keywords = {cost modeling, geothermal, supply curve},
+	pages = {16},
+}
+
+@techreport{blackwell_temperature-at-depth_2011,
+	title = {Temperature-{At}-{Depth} {Maps} {For} the {Conterminous} {US} and {Geothermal} {Resource} {Estimates}},
+	url = {https://www.osti.gov/biblio/1137036},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {GRC1029452},
+	urldate = {2020-12-07},
+	institution = {Southern Methodist University Geothermal Laboratory, Dallas, TX (United States)},
+	author = {Blackwell, David and Richards, Maria and Frone, Zachary and Batir, Joe and Ruzo, Andrés and Dingwall, Ryan and Williams, Mitchell},
+	year = {2011},
+}
+
+@techreport{anderson_national_2013,
+	title = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}: {ASSESSMENT} {OF} {GEOTHERMAL} {COMMUNITY} {DATA} {NEEDS}},
+	shorttitle = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}},
+	url = {https://www.osti.gov/biblio/1130333},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	urldate = {2021-06-04},
+	institution = {Boise State Univ., ID (United States)},
+	author = {Anderson, Arlene and Blackwell, David and Chickering, Cathy and Boyd, Toni and Horne, Roland and MacKenzie, Matthew and Moore, Joseph and Nickull, Duane and Richard, Stephen and Shevenell, Lisa A.},
+	year = {2013},
+}
+
+@article{tester_impact_2007,
+	title = {Impact of enhanced geothermal systems on {US} energy supply in the twenty-first century},
+	volume = {365},
+	issn = {1364-503X},
+	doi = {10.1098/rsta.2006.1964},
+	abstract = {Recent national focus on the value of increasing US supplies of indigenous renewable energy underscores the need for re-evaluating all alternatives, particularly those that are large and well distributed nationally. A panel was assembled in September 2005 to evaluate the technical and economic feasibility of geothermal becoming a major supplier of primary energy for US base-load generation capacity by 2050. Primary energy produced from both conventional hydrothermal and enhanced (or engineered) geothermal systems (EGS) was considered on a national scale. This paper summarizes the work of the panel which appears in complete form in a 2006 MIT report, 'The future of geothermal energy' parts 1 and 2. In the analysis, a comprehensive national assessment of US geothermal resources, evaluation of drilling and reservoir technologies and economic modelling was carried out. The methodologies employed to estimate geologic heat flow for a range of geothermal resources were utilized to provide detailed quantitative projections of the EGS resource base for the USA. Thirty years of field testing worldwide was evaluated to identify the remaining technology needs with respect to drilling and completing wells, stimulating EGS reservoirs and converting geothermal heat to electricity in surface power and energy recovery systems. Economic modelling was used to develop long-term projections of EGS in the USA for supplying electricity and thermal energy. Sensitivities to capital costs for drilling, stimulation and power plant construction, and financial factors, learning curve estimates, and uncertainties and risks were considered.},
+	language = {eng},
+	number = {1853},
+	journal = {Philosophical Transactions. Series A, Mathematical, Physical, and Engineering Sciences},
+	author = {Tester, Jefferson W. and Anderson, Brian J. and Batchelor, Anthony S. and Blackwell, David D. and DiPippo, Ronald and Drake, Elisabeth M. and Garnish, John and Livesay, Bill and Moore, Michal C. and Nichols, Kenneth and Petty, Susan and Toksoz, M. Nafi and Veatch, Ralph W. and Baria, Roy and Augustine, Chad and Murphy, Enda and Negraru, Petru and Richards, Maria},
+	year = {2007},
+	pmid = {17272236},
+	keywords = {Conservation of Energy Resources, Electricity, Energy-Generating Resources, Forecasting, Heating, Power Plants, Technology Assessment, Biomedical, United States},
+	pages = {1057--1094},
+}
+
+@techreport{blackwell_geothermal_2000,
+	title = {Geothermal {Resource}/{Reservoir} {Investigations} {Based} on {Heat} {Flow} and {Thermal} {Gradient} {Data} for the {United} {States}},
+	url = {https://www.osti.gov/biblio/758787},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {DOE/ID/13504},
+	urldate = {2021-06-04},
+	institution = {USDOE Idaho Operations Office, Idaho Falls, ID; Southern Methodist University, Dallas, TX (US)},
+	author = {Blackwell, David and Wisian, Kenneth and Richards, Maria and Steele, John},
+	year = {2000},
+	doi = {10.2172/758787},
+}
+
+@techreport{blackwell_heat_1990,
+	title = {Heat flow patterns of the {North} {American} continent: {A} discussion of the {DNAG} {Geothermal} {Map} of {North} {America}},
+	shorttitle = {Heat flow patterns of the {North} {American} continent},
+	url = {https://www.osti.gov/biblio/896322},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	urldate = {2021-06-04},
+	institution = {DOEEEGTP (USDOE Office of Energy Efficiency and Renewable Energy Geothermal Tech Pgm)},
+	author = {Blackwell, David and Steele, John and Carter, Larry},
+	year = {1990},
+	doi = {10.2172/896322},
+}
+
+@inproceedings{wisian_heat_1999,
+	title = {Heat flow in the western {United} {States} and extensional geothermal systems},
+	volume = {219},
+	publisher = {Citeseer},
+	author = {Wisian, Kenneth and Blackwell, David and Richards, Maria},
+	year = {1999},
+}
+
+@article{blackwell_geothermal_1995,
+	title = {Geothermal regime in the central and eastern {United} {States} east of the {Rocky} {Mountains}},
+	journal = {Proc. World Geothermal Cong},
+	author = {Blackwell, David and Wisian, Kenneth and Stele, John},
+	year = {1995},
+	pages = {649--653},
+}
+
+@techreport{vesselinov_discovering_2020,
+	address = {Los Alamos, NM},
+	title = {Discovering signatures of hidden geothermal resources based on unsupervised learning},
+	institution = {Los Alamos National Lab},
+	author = {Vesselinov, Velimir Valentinov and Mudunuru, Maruti Kumar and Ahmmed, Bulbul and Karra, Satish and Middleton, Richard Stephen},
+	year = {2020},
+}
+
+@misc{nist_nist_2021,
+	title = {The {NIST} {Reference} on {Constants}, {Units}, and {Uncertainty}},
+	url = {https://physics.nist.gov/cuu/Uncertainty/coverage.html},
+	urldate = {2021-06-10},
+	journal = {Expanded uncertainty and coverage factors},
+	author = {{NIST}},
+	year = {2021},
+}
+
+@book{baird_experimentation_1962,
+	title = {Experimentation: an introduction to measurement theory and experiment design},
+	isbn = {0-13-295345-5},
+	publisher = {Prentice Hall},
+	author = {Baird, David Carr},
+	year = {1962},
+}
+
+@book{morgan_best_2009,
+	title = {Best {Practice} {Approaches} for {Characterizing}, {Communicating} and {Incorporating} {Scientific} {Uncertainty} in {Climate} {Decision} {Making}: {Synthesis} and {Assessment} {Product} 5.2 {Report}},
+	volume = {5},
+	publisher = {US Climate Change Science Program},
+	author = {Morgan, Millett Granger},
+	year = {2009},
+}
+
+@book{hastie_elements_2009,
+	title = {The elements of statistical learning: data mining, inference, and prediction},
+	isbn = {0-387-84858-4},
+	publisher = {Springer Science \& Business Media},
+	author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+	year = {2009},
+}
+
+@book{james_introduction_2013,
+	title = {An introduction to statistical learning},
+	volume = {112},
+	publisher = {Springer},
+	author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+	year = {2013},
+}
+
+@inproceedings{brown_machine_2020,
+	address = {Nevada},
+	title = {Machine learning for natural resource assessment: {An} application to the blind geothermal systems of {Nevada}},
+	volume = {44},
+	booktitle = {Geothermal {Resources} {Council} {Transactions}},
+	author = {Brown, Stephen C and Coolbaugh, Mark F and DeAngelo, Jacob and Faulds, James E and Fehler, Michael and Gu, Chen and Queen, John H and Treitel, Sven and Smith, Connor M and Mlawsky, Eli},
+	year = {2020},
+	pages = {13},
+}
+
+@inproceedings{smith_characterizing_2021,
+	address = {Stanford, California},
+	title = {Characterizing {Signatures} of {Geothermal} {Exploration} {Data} with {Machine} {Learning} {Techniques}: {An} {Application} to the {Nevada} {Play} {Fairway} {Analysis}},
+	booktitle = {{PROCEEDINGS}, 46th {Workshop} on {Geothermal} {Reservoir} {Engineering}},
+	author = {Smith, Connor M and Faulds, James E and Brown, Stephen and Coolbaugh, Mark and Lindsey, Cary R and Treitel, Sven and Ayling, Bridget and Fehler, Michael and Gu, Chen and Mlawsky, Eli},
+	month = feb,
+	year = {2021},
+}
+
+@inproceedings{faulds_progress_2017,
+	title = {Progress report on the {Nevada} play fairway project: {Integrated} geological, geochemical, and geophysical analyses of possible new geothermal systems in the {Great} {Basin} region},
+	publisher = {Nevada Bureau of Mines and Geology, University of Nevada, Reno},
+	author = {Faulds, James and Hinz, Nicholas and Coolbaugh, Mark and Sadowski, Andrew and Shevenell, Lisa and McConville, Emma and Craig, Jason and Sladek, Chris and Siler, Drew},
+	year = {2017},
+	note = {Issue: NoneDOE-UNR-06731-04},
+}
+
+@inproceedings{gao_delineating_2021,
+	address = {Stanford, California},
+	title = {Delineating {Faults} at the {Soda} {Lake} {Geothermal} {Field} {Using} {Machine} {Learning}},
+	booktitle = {{PROCEEDINGS}, 46th {Workshop} on {Geothermal} {Reservoir} {Engineering}},
+	author = {Gao, Kai and Huang, Lianjie and Lin, Rongrong and Hu, Hao and Zheng, Yingcai and Cladohous, Trenton},
+	month = feb,
+	year = {2021},
+}
+
+@misc{small_theory_2019,
+	title = {Theory meets application: {Machine} learning techniques for geothermal exploration {\textbar} {Penn} {State} {University}},
+	shorttitle = {Theory meets application},
+	url = {https://news.psu.edu/story/570047/2019/04/18/research/theory-meets-application-machine-learning-techniques-geothermal},
+	abstract = {When Jing Yang, assistant professor of electrical engineering, began looking for practical applications to her machine learning research, partnering with Chris Marone, professor of geosciences, for his work on safe and efficient geothermal exploration and energy production, was a perfect fit.},
+	language = {en},
+	urldate = {2021-06-09},
+	author = {Small, Sarah},
+	month = apr,
+	year = {2019},
+}
+
+@misc{pennsylvania_state_university_theory_nodate,
+	title = {Theory meets application: {Machine} learning techniques for geothermal exploration},
+	shorttitle = {Theory meets application},
+	url = {https://phys.org/news/2019-04-theory-application-machine-techniques-geothermal.html},
+	abstract = {When Jing Yang, assistant professor of electrical engineering, began looking for practical applications to her machine learning research, partnering with Chris Marone, professor of geosciences, for his work on safe and efficient geothermal exploration and energy production, was a perfect fit.},
+	language = {en},
+	urldate = {2021-06-09},
+	author = {{Pennsylvania State University}},
+}
+
+@inproceedings{cavur_dinsar_2021,
+	address = {Stanford, California},
+	title = {The {DInSAR} {Analysis} with {Machine} {Learning} for {Delineating} {Geothermal} {Sites} at the {Brady} {Geothermal} {Field}},
+	booktitle = {46th {Workshop} on {Geothermal} {Reservoir} {Engineering}},
+	author = {Cavur, Mahmut and Moraga, Jim and Duzgun, H Sebnem and Soydan, Hilal and Jin, Ge},
+	month = feb,
+	year = {2021},
+}
+
 @inproceedings{nash_adaptation_2015,
 	title = {Adaptation of a {Petroleum} {Exploration} {Tool} to {Geothermal} {Exploration}: {Preliminary} {Play} {Fairway} {Model} of {Tularosa} {Basin}, {New} {Mexico}, and {Texas}},
 	volume = {39},
@@ -54,14 +271,6 @@
 	author = {Doughty, C. and Dobson, P. F. and Wall, A. and McLing, T. and Weiss, C.},
 	month = jun,
 	year = {2018},
-}
-
-@article{blackwell_geothermal_1995,
-	title = {Geothermal regime in the central and eastern {United} {States} east of the {Rocky} {Mountains}},
-	journal = {Proc. World Geothermal Cong},
-	author = {Blackwell, David D and Wisian, Kenneth W and Stele, John L},
-	year = {1995},
-	pages = {649--653},
 }
 
 @techreport{bielicki_hydrogeolgic_2015,
@@ -282,19 +491,6 @@
 	pages = {31--50},
 }
 
-@techreport{anderson_national_2013,
-	title = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}: {ASSESSMENT} {OF} {GEOTHERMAL} {COMMUNITY} {DATA} {NEEDS}},
-	shorttitle = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}},
-	url = {https://www.osti.gov/biblio/1130333},
-	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
-	language = {English},
-	urldate = {2021-06-04},
-	institution = {Boise State Univ., ID (United States)},
-	author = {Anderson, Arlene and Blackwell, David and Chickering, Cathy and Boyd, Toni and Horne, Roland and MacKenzie, Matthew and Moore, Joseph and Nickull, Duane and Richard, Stephen and Shevenell, Lisa A.},
-	month = jan,
-	year = {2013},
-}
-
 @article{sorey_low-temperature_1983,
 	title = {Low-temperature geothermal resources in the central and eastern {United} {States}},
 	volume = {892},
@@ -316,42 +512,6 @@
 	month = jan,
 	year = {1979},
 	doi = {10.2172/6870401},
-}
-
-@techreport{blackwell_geothermal_2000,
-	title = {Geothermal {Resource}/{Reservoir} {Investigations} {Based} on {Heat} {Flow} and {Thermal} {Gradient} {Data} for the {United} {States}},
-	url = {https://www.osti.gov/biblio/758787},
-	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
-	language = {English},
-	number = {DOE/ID/13504},
-	urldate = {2021-06-04},
-	institution = {USDOE Idaho Operations Office, Idaho Falls, ID; Southern Methodist University, Dallas, TX (US)},
-	author = {Blackwell, D. D. and Wisian, K. W. and Richards, M. C. and Steele, J. L.},
-	month = apr,
-	year = {2000},
-	doi = {10.2172/758787},
-}
-
-@inproceedings{wisian_heat_1999,
-	title = {Heat flow in the western {United} {States} and extensional geothermal systems},
-	volume = {219},
-	publisher = {Citeseer},
-	author = {Wisian, Kenneth W and Blackwell, David D and Richards, Maria},
-	year = {1999},
-}
-
-@techreport{blackwell_heat_1990,
-	title = {Heat flow patterns of the {North} {American} continent: {A} discussion of the {DNAG} {Geothermal} {Map} of {North} {America}},
-	shorttitle = {Heat flow patterns of the {North} {American} continent},
-	url = {https://www.osti.gov/biblio/896322},
-	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
-	language = {English},
-	urldate = {2021-06-04},
-	institution = {DOEEEGTP (USDOE Office of Energy Efficiency and Renewable Energy Geothermal Tech Pgm)},
-	author = {Blackwell, David D. and Steele, John L. and Carter, Larry C.},
-	month = jan,
-	year = {1990},
-	doi = {10.2172/896322},
 }
 
 @article{kehle_aapg_1970,
@@ -1487,7 +1647,7 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	urldate = {2021-04-14},
 }
 
-@techreport{schochet_development_2001,
+@techreport{schochet_development_2001-1,
 	title = {Development of a {Plan} to {Implement} {Enhanced} {Geothermal} {Systems} ({EGS}) in the {Animas} {Valley}, {New} {Mexico} - {Final} {Report} - 07/26/2000 - 02/01/2001; {FINAL}},
 	url = {http://inis.iaea.org/Search/search.aspx?orig_q=RN:33052100},
 	language = {English},
@@ -1695,23 +1855,6 @@ Section: Reports},
 	year = {2019},
 	keywords = {cost modeling, geothermal},
 	pages = {5},
-}
-
-@article{petty_updated_nodate,
-	title = {Updated {U}.{S}. {Geothermal} {Supply} {Characterization}},
-	abstract = {This paper documents the approach taken to characterize and represent an updated assessment of U.S. geothermal supply for use in forecasting the penetration of geothermal electrical generation in the National Energy Modeling System (NEMS). This work is motivated by several factors: The supply characterization used as the basis of several recent Department of Energy (DOE) forecasts of geothermal capacity is outdated; additional geothermal resource assessments have been published; and a new costing tool that incorporates current technology, engineering practices, and associated costs has been released.},
-	language = {en},
-	author = {Petty, S and Technology, Black Mountain},
-	keywords = {cost model, geothermal, supply curve},
-	pages = {24},
-}
-
-@article{augustine_updated_nodate,
-	title = {Updated {U}.{S}. {Geothermal} {Supply} {Curve}},
-	language = {en},
-	author = {Augustine, Chad and Young, Katherine R and Anderson, Arlene},
-	keywords = {cost modeling, geothermal, supply curve},
-	pages = {16},
 }
 
 @misc{noauthor_hdr_nodate,
@@ -2384,23 +2527,6 @@ Publisher: Academic Journals},
 	pages = {77--78},
 }
 
-@article{tester_impact_2007,
-	title = {Impact of enhanced geothermal systems on {US} energy supply in the twenty-first century},
-	volume = {365},
-	issn = {1364-503X},
-	doi = {10.1098/rsta.2006.1964},
-	abstract = {Recent national focus on the value of increasing US supplies of indigenous renewable energy underscores the need for re-evaluating all alternatives, particularly those that are large and well distributed nationally. A panel was assembled in September 2005 to evaluate the technical and economic feasibility of geothermal becoming a major supplier of primary energy for US base-load generation capacity by 2050. Primary energy produced from both conventional hydrothermal and enhanced (or engineered) geothermal systems (EGS) was considered on a national scale. This paper summarizes the work of the panel which appears in complete form in a 2006 MIT report, 'The future of geothermal energy' parts 1 and 2. In the analysis, a comprehensive national assessment of US geothermal resources, evaluation of drilling and reservoir technologies and economic modelling was carried out. The methodologies employed to estimate geologic heat flow for a range of geothermal resources were utilized to provide detailed quantitative projections of the EGS resource base for the USA. Thirty years of field testing worldwide was evaluated to identify the remaining technology needs with respect to drilling and completing wells, stimulating EGS reservoirs and converting geothermal heat to electricity in surface power and energy recovery systems. Economic modelling was used to develop long-term projections of EGS in the USA for supplying electricity and thermal energy. Sensitivities to capital costs for drilling, stimulation and power plant construction, and financial factors, learning curve estimates, and uncertainties and risks were considered.},
-	language = {eng},
-	number = {1853},
-	journal = {Philosophical Transactions. Series A, Mathematical, Physical, and Engineering Sciences},
-	author = {Tester, Jefferson W. and Anderson, Brian J. and Batchelor, Anthony S. and Blackwell, David D. and DiPippo, Ronald and Drake, Elisabeth M. and Garnish, John and Livesay, Bill and Moore, Michal C. and Nichols, Kenneth and Petty, Susan and Toksoz, M. Nafi and Veatch, Ralph W. and Baria, Roy and Augustine, Chad and Murphy, Enda and Negraru, Petru and Richards, Maria},
-	month = apr,
-	year = {2007},
-	pmid = {17272236},
-	keywords = {Conservation of Energy Resources, Electricity, Energy-Generating Resources, Forecasting, Heating, Power Plants, Technology Assessment, Biomedical, United States},
-	pages = {1057--1094},
-}
-
 @inproceedings{latimer_use_2017,
 	address = {Stanford, California},
 	title = {Use of the {Experience} {Curve} to {Understand} {Economics} for {At}-{Scale} {EGS} {Projects}},
@@ -2872,27 +2998,6 @@ Publisher: Elsevier},
 	author = {Bram, Kurt and Draxler, Johann and Hirschmann, Gottfried and Zoth, Gustav and Hiron, Stephane and Kühr, Miel},
 	year = {1988},
 	pages = {4--22},
-}
-
-@article{blackwell_temperature-at-depth_nodate,
-	title = {Temperature-{At}-{Depth} {Maps} for the {Conterminous} {U}. {S}. and {Geothermal} {Resource} {Estimates}},
-	abstract = {A third generation geothermal resource assessment has recently been completed for the conterminous US based on a revised heat flow map using over 35,000 data sites. Improvements include: nearly doubling the number of data points used in the analysis, more detailed thermal conductivity models for temperature-at-depth and heat flow calculations, and addition of a significant number of calibration wells as checks on the bottom hole temperature (BHT) correction. The results increase the accuracy of temperature-at-depth models for the conterminous US. These temperature models are the key input required for evaluating the nonconventional geothermal resources on a regional to sub-regional basis. The new resource assessment was prepared according to a proposed global protocol for estimating Enhanced/ Engineered Geothermal Systems (EGS) resource potential. A comparison of the new assessment approach with previous studies is provided, along with a discussion of the differences associated with the revised approach.},
-	language = {en},
-	author = {Blackwell, David and Richards, M and Frone, Z and Batir, J and Ruzo, A and Dingwall, R and Williams, M},
-	pages = {7},
-}
-
-@techreport{blackwell_temperature-at-depth_2011,
-	title = {Temperature-{At}-{Depth} {Maps} {For} the {Conterminous} {US} and {Geothermal} {Resource} {Estimates}},
-	url = {https://www.osti.gov/biblio/1137036},
-	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
-	language = {English},
-	number = {GRC1029452},
-	urldate = {2020-12-07},
-	institution = {Southern Methodist University Geothermal Laboratory, Dallas, TX (United States)},
-	author = {Blackwell, David and Richards, Maria and Frone, Zachary and Batir, Joe and Ruzo, Andrés and Dingwall, Ryan and Williams, Mitchell},
-	month = oct,
-	year = {2011},
 }
 
 @article{lines_time_2018,
